cambiando en la rama dev

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,8 @@
 </ul>
 
 <div>
-  <p>imagen desde imagekit</p>
-  <img src="https://ik.imagekit.io/2h2ezjqty/20181125_182556.jpg?updatedAt=1738601320291" alt="">
+ <button>Hola mundo de nuevo, realizado en la rama dev</button>
 </div>
 
 
 <router-outlet />
-
